--- a/scss/style.scss
+++ b/scss/style.scss
@@ -208,6 +208,25 @@ body{
     color: black;
 }
 
+.colorBrown{
+    color: #7e5127 !important;
+    // font-weight: bold;
+    
+}
+.colorBrown2{
+    color: #7e5127 !important;
+    // font-weight: bold;
+}
+
+.colorIcon{
+    color: rgb(180, 101, 180) !important;
+    // font-weight: bold;
+}
+.colorBrown:hover{
+    color: rgb(133, 85, 133) !important;
+    // font-weight: bold;
+    
+}
 
 .botonNow {
     // border: none;
