--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,9 @@
 
 
 #footer{
+    // .container2{
+    //     padding: 0px 0px 0px 0px;
+    // }
     // -webkit-box-shadow: inset 0 20px 20px -20px rgba(0,0,0,0.8);
     // -moz-box-shadow: inset 0 20px 20px -20px rgba(0,0,0,0.8);
     // box-shadow: inset 0 20px 20px -20px rgba(0,0,0,0.8);
@@ -16,13 +19,99 @@
         // 0 -22.3px -17.9px rgba(94, 38, 99, 0.034),
         // 0 -41.8px -33.4px rgba(84, 22, 90, 0.034),
         // 0 -100px -80px rgba(57, 11, 61, 0.034);
+
     }
     .center{
-        height: 200px;
+        img{
+            border: 1px solid red;
+            border-radius: 50%;
+            height: 200px;
+            width: 200px;
+        }
     }
     .gb{
         height: 50px;
         background: linear-gradient(to right, rgb(212, 192, 212), white, rgb(212, 192, 212), white);
+        p{
+           margin: 0px;
+           color: #7e5127 !important;
+           strong{
+               a{
+                color: inherit; /* blue colors for links too */
+                text-decoration: inherit; /* no underline */
+               }
+            &:hover {
+                color: rgb(133, 85, 133)
+              }
+
+           }
+        }
     }
-    
+    .redes{
+        /*=======================FIRMA================*/
+
+            .social-menu2{
+                // border: 1px solid blue;
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            
+            
+            .social-menu2 .social-menu22 {
+                list-style: none;
+                margin: 0 10px;
+            
+            }
+            .social-menu2 .social-menu22 .fa {
+                color:  #7e5127;
+                font-size: 25px;
+                line-height: 50px;
+                transition: 0.5s;
+            }
+            .social-menu2 .social-menu22 .fa:hover {
+                color:  rgb(194, 120, 194);
+            }
+            .social-menu2 .social-menu22 a {
+                // position: relative;
+                display: block;
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                background-color: transparent;
+                text-align: center;
+                transition: 0.5s;
+                transform: translate(0, 0px);
+                box-shadow: 0px 7px 5px rgb(160, 119, 160);
+            }
+            // .social-menu2 .social-menu22 a:hover {
+            //     transform: rotate(0deg) skew(0deg) translate(0, -10px);
+            // }
+            // .social-menu2 .social-menu22:nth-child(1) a:hover {
+            //     background-color: black;
+            // }
+            // .social-menu2 .social-menu22:nth-child(2) a:hover {
+            //     background-color: black;
+            // }
+            // .social-menu2 .social-menu22:nth-child(3) a:hover {
+            //     background-color: black;
+            // }
+            // .social-menu2 .social-menu22:nth-child(4) a:hover {
+            //     background-color: black;
+            // }
+            // .social-menu2 .social-menu22:nth-child(5) a:hover {
+            //     background-color: black;
+            // }
+            // .social-menu2 .social-menu22:nth-child(6) a:hover {
+            //     background-color: black;
+            // }
+                }
+            }
+
+.separador{
+    height: 7px;
+    background: linear-gradient(to right, rgb(212, 192, 212), white, rgb(212, 192, 212), white);
+    margin: 0px
 }
+
